tests/neg/exports3.scala
trait P:
  def foo: Int

class A extends P:
  export this.foo // error